Fixes nowrap media

--- a/style.scss
+++ b/style.scss
@@ -17,8 +17,13 @@ $h4-font-size:                1rem !default;
 $link-color:                              $primary-color !default;
 $link-hover-color:                        $primary-color !default;
 
+
+
 @import "fonts";
 @import "node_modules/bootstrap/scss/bootstrap";
+@import "node_modules/bootstrap/scss/_mixins";
+
+@include media-breakpoint-down(sm) { .text-nowrap { white-space: normal!important;} }
 
 h1, h2, h3 {
     font-weight: bold;
@@ -84,9 +89,9 @@ header.next-slide {
 .more-us-box a {
     color: $secondary-color;
     font-size: 2.72rem;
+    font-weight: 500;
 }
 .more-us-box a:hover {
-    text-decoration: none;
     color: $secondary-color;
 }
 .newsletter-box .newsletter-box-position {
